src/elements/form-field/form-field/form-field.scss
@use '../../core/styles' as sbb;

:host {
  --sbb-form-field-error-divider-width: var(--sbb-spacing-fixed-1x);
  --sbb-form-field-error-padding-block-start: var(--sbb-form-field-error-divider-width);
  --sbb-form-field-select-inline-padding-end: calc(
    var(--sbb-icon-svg-width) + var(--sbb-form-field-gap)
  );
  --sbb-form-field-label-size: calc(
    var(--sbb-form-field-label-text-size) * var(--sbb-typo-line-height-text)
  );
  --sbb-form-field-text-line-height: calc(
    var(--sbb-form-field-input-text-size) * var(--sbb-typo-line-height-text)
  );
  --sbb-form-field-margin-block-start: calc(
    (
        var(--sbb-form-field-min-height) - var(--sbb-form-field-label-size) - var(
            --sbb-form-field-text-line-height
          ) +
          var(--_sbb-form-field-label-to-input-overlapping)
      ) /
      2
  );

  // Lock sbb-icon size
  --sbb-icon-svg-width: var(--sbb-form-field-icon-size);
  --sbb-icon-svg-height: var(--sbb-form-field-icon-size);

  // As the form field has always a white background, we have to fix the focus outline color
  // to default color for cases where the form field is used in a negative context.
  --sbb-focus-outline-color: light-dark(
    var(--sbb-focus-outline-color-default),
    var(--sbb-focus-outline-color-dark)
  );

  display: inline-block;
  color: var(--sbb-form-field-color);
}

:host(:where(:not([width='collapse']))) {
  min-width: #{sbb.px-to-rem-build(150)};
  width: min(#{sbb.px-to-rem-build(300)}, 100%);
}

:host([negative]) {
  color: var(--sbb-color-3-negative);

  --sbb-form-field-background-color: var(--sbb-background-color-1-negative);
  --sbb-form-field-border-color: var(--sbb-border-color-5);
  --sbb-form-field-label-color: var(--sbb-color-5);
  --sbb-form-field-prefix-color: var(--sbb-color-5);
  --sbb-form-field-text-color: var(--sbb-color-3-negative);
  --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
  --sbb-form-field-arrow-color: var(--sbb-color-3-negative);

  @include sbb.if-forced-colors {
    --sbb-form-field-border-color: ButtonBorder;
  }
}

:host([size='s']) {
  --sbb-form-field-min-height: var(--sbb-size-element-xs);
  --sbb-form-field-padding-inline: var(--sbb-spacing-fixed-2x);
  --sbb-form-field-input-text-size: var(--sbb-text-font-size-s);
  --sbb-form-field-label-text-size: var(--sbb-text-font-size-xxs);

  // Values found by try and error
  --_sbb-form-field-label-to-input-overlapping: #{sbb.px-to-rem-build(10)};
  --_sbb-form-field-floating-label-transform: #{sbb.px-to-rem-build(5.5)};
  --_sbb-form-field-spacer-margin-block-end: #{sbb.px-to-rem-build(-8.5)};

  @include sbb.mq($from: large) {
    // Values found by try and error
    --_sbb-form-field-label-to-input-overlapping: #{sbb.px-to-rem-build(11)};
    --_sbb-form-field-floating-label-transform: #{sbb.px-to-rem-build(5)};
    --_sbb-form-field-spacer-margin-block-end: #{sbb.px-to-rem-build(-8)};
  }
}

:host([size='m']) {
  --sbb-form-field-min-height: var(--sbb-size-element-m);
  --sbb-form-field-padding-inline: var(--sbb-spacing-fixed-3x);
  --sbb-form-field-input-text-size: var(--sbb-text-font-size-m);
  --sbb-form-field-label-text-size: var(--sbb-text-font-size-xs);
  --_sbb-form-field-label-to-input-overlapping: var(--sbb-spacing-fixed-1x);
  --_sbb-form-field-floating-label-transform: #{sbb.px-to-rem-build(8.5)};
  --_sbb-form-field-spacer-margin-block-end: calc(
    -1 * var(--_sbb-form-field-label-to-input-overlapping)
  );

  @include sbb.mq($from: large) {
    --_sbb-form-field-floating-label-transform: #{sbb.px-to-rem-build(10.5)};
  }
}

:host([size='l']) {
  --sbb-form-field-min-height: var(--sbb-size-element-l);
  --sbb-form-field-padding-inline: var(--sbb-spacing-responsive-xxxs);
}

:host([error-space='reserve']) {
  --sbb-form-field-error-min-height: calc(
    var(--sbb-typo-line-height-text) * var(--sbb-text-font-size-xs)
  );
  --sbb-form-field-error-padding-block-start-override: var(--sbb-form-field-error-divider-width);
}

:host(:where(:state(readonly), :state(disabled))) {
  --sbb-form-field-background-color: var(--sbb-background-color-3);
  --sbb-form-field-border-color: light-dark(var(--sbb-color-graphite), var(--sbb-color-smoke));
  --sbb-form-field-arrow-color: light-dark(var(--sbb-color-granite), var(--sbb-color-storm));

  @include sbb.if-forced-colors {
    --sbb-form-field-border-color: ButtonBorder;
  }
}

:host(:where(:state(readonly), :state(disabled))[negative]) {
  --sbb-form-field-background-color: var(--sbb-background-color-3-negative);
  --sbb-form-field-border-color: var(--sbb-border-color-5);
  --sbb-form-field-arrow-color: var(--sbb-border-color-5);
}

:host(:where(:state(disabled))) {
  --sbb-form-field-label-color: light-dark(var(--sbb-color-granite), var(--sbb-color-smoke));
  --sbb-form-field-prefix-color: light-dark(var(--sbb-color-granite), var(--sbb-color-storm));
  --sbb-form-field-border-style: dashed;

  @include sbb.if-forced-colors {
    --sbb-form-field-label-color: GrayText !important;
    --sbb-form-field-prefix-color: GrayText !important;
    --sbb-form-field-text-color: GrayText !important;
    --sbb-form-field-border-color: GrayText !important;
  }
}

// :where is to align specificity
:host(:where(:state(disabled))[negative]) {
  --sbb-form-field-text-color: var(--sbb-color-5);
  --sbb-form-field-label-color: var(--sbb-color-5);
  --sbb-form-field-prefix-color: var(--sbb-color-5);
}

// :where is to align specificity
:host(:where(:state(readonly)):not([negative])) {
  --sbb-form-field-label-color: light-dark(var(--sbb-color-granite), var(--sbb-color-smoke));
  --sbb-form-field-prefix-color: light-dark(var(--sbb-color-granite), var(--sbb-color-storm));
}

// :where is to align specificity
:host(:where(:state(focus))) {
  --sbb-form-field-border-color: var(--sbb-border-color-3);
  --sbb-form-field-prefix-color: var(--sbb-color-3);
  --sbb-form-field-border-width: var(--sbb-border-width-2x);
}
/* ... */

